chore: fix background bleed in kelsey testimonial image

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -408,6 +408,11 @@ div.components-content {
   font-size: 0.95rem;
 }
 
+.kelsey-testimonial > img {
+  box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, .1);
+  border-radius: 50%;
+}
+
 .md-typeset > h1:first-of-type {
   margin: 0;
 }
